--- a/test/extarct_datestamp_gene.ipynb
+++ b/test/extarct_datestamp_gene.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "4          9606       11       NATP"
       ]
      },
-     "execution_count": 408,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "4   [2340091, 9284941, 16416399, 21995608, 25432241]  "
       ]
      },
-     "execution_count": 409,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "5600  [1088347, 1303181, 1321290, 1327751, 1349102, ...  "
       ]
      },
-     "execution_count": 410,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -377,24 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_tim = pd.DataFrame()\n",
-    "# timeframe_dates = [idx.split('/')[-1][:-4] for idx in timeframe]\n",
-    "# list_pubid = []\n",
-    "# for idx1 in range(len(timeframe)):\n",
-    "#     tsv_data = pd.read_csv(timeframe[idx1], sep='\\t')\n",
-    "#     tsv_data.columns = ['date', 'pubmed_id']\n",
-    "#     df_tim[tsv_data['date'][0]] = tsv_data['pubmed_id']\n",
-    "\n",
-    "# print(df_tim.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -438,22 +421,25 @@
      "output_type": "stream",
      "text": [
       "1 290 348 APOE\n",
-      "6 1\n",
-      "8 1\n",
-      "13 1\n",
-      "17 1\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/sj/4h9__h9521ldn6z61skszpz40000gp/T/ipykernel_94993/1729682791.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m             \u001b[0mtsv_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mtsv_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'pubmed_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m             \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mele\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgene_pubmed_id\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;32mfor\u001b[0m \u001b[0mele\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtsv_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pubmed_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mres\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/sj/4h9__h9521ldn6z61skszpz40000gp/T/ipykernel_94993/1729682791.py\u001b[0m in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     12\u001b[0m             \u001b[0mtsv_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mtsv_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'pubmed_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m             \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mele\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgene_pubmed_id\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;32mfor\u001b[0m \u001b[0mele\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtsv_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pubmed_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mres\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "2 506 627 BDNF\n",
+      "3 1545 1956 EGFR\n",
+      "4 1660 2099 ESR1\n",
+      "5 1896 2475 MTOR\n",
+      "6 2406 3091 HIF1A\n",
+      "7 2773 3569 IL6\n",
+      "8 2779 3576 CXCL8\n",
+      "9 3643 4780 NFE2L2\n",
+      "10 5131 6622 SNCA\n",
+      "11 5266 6774 STAT3\n",
+      "12 5493 7040 TGFB1\n",
+      "13 5572 7124 TNF\n",
+      "14 5600 7157 TP53\n",
+      "15 5818 7422 VEGFA\n",
+      "16 7976 10413 YAP1\n",
+      "17 10966 29126 CD274\n",
+      "18 13030 56339 METTL3\n",
+      "19 13701 59272 ACE2\n",
+      "20 16728 114548 NLRP3\n"
      ]
     }
    ],
@@ -463,7 +449,8 @@
     "    gene_id = row['gene_id']\n",
     "    gene_name = row['gene_names']\n",
     "    gene_pubmed_id = row['pubmed_id']\n",
-    "    if gene_id in gene_id_list:\n",
+    "    # if gene_id in gene_id_list:\n",
+    "    if gene_id == 4609:\n",
     "        print(c1, idx, gene_id, gene_name)\n",
     "        c1 +=1\n",
     "        date_all = []\n",
@@ -477,52 +464,6 @@
     "        df_date = pd.DataFrame({'date': np.array(list(date_all)), 'cite': np.array(list(cite_all)),})\n",
     "        df_date.to_csv(os.path.join(gene_files, str(str(gene_name) + '.tsv')), sep=\"\\t\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 417,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[7157,\n",
-       " 59272,\n",
-       " 348,\n",
-       " 3569,\n",
-       " 29126,\n",
-       " 4780,\n",
-       " 3091,\n",
-       " 7040,\n",
-       " 6622,\n",
-       " 6774,\n",
-       " 1956,\n",
-       " 627,\n",
-       " 2099,\n",
-       " 10413,\n",
-       " 114548,\n",
-       " 7124,\n",
-       " 56339,\n",
-       " 2475,\n",
-       " 3576,\n",
-       " 7422]"
-      ]
-     },
-     "execution_count": 417,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gene_id_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
